==> AudioStreamingPlatform/mbed-os/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF53/serial_api.c <==
#include <string.h>
#include "serial_api.h"
#include "nrfx_uarte.h"
#include "mbed_error.h"

void serial_init(serial_t *obj, PinName tx, PinName rx) {
    MBED_ASSERT(obj);
    memset(obj, 0, sizeof(*obj));
    obj->instance.drv_inst_idx = NRFX_UARTE_ENABLED_COUNT;

    for (uint8_t index = 0; index < UARTE_COUNT; ++index) {
        if (!nrfx_uarte_in_use[index]) {
            switch (index) {
#if NRFX_CHECK(NRFX_UARTE0_ENABLED)
                case 0: {
                    nrfx_uarte_t instance0 = NRFX_UARTE_INSTANCE(0);
                    memcpy(&obj->instance, &instance0, sizeof(obj->instance));
                    break;
                }
#endif
#if NRFX_CHECK(NRFX_UARTE1_ENABLED)
                case 1: {
                    nrfx_uarte_t instance1 = NRFX_UARTE_INSTANCE(1);
                    memcpy(&obj->instance, &instance1, sizeof(obj->instance));
                    break;
                }
#endif
#if NRFX_CHECK(NRFX_UARTE2_ENABLED)
                case 2: {
                    nrfx_uarte_t instance2 = NRFX_UARTE_INSTANCE(2);
                    memcpy(&obj->instance, &instance2, sizeof(obj->instance));
                    break;
                }
#endif
#if NRFX_CHECK(NRFX_UARTE3_ENABLED)
                case 3: {
                    nrfx_uarte_t instance3 = NRFX_UARTE_INSTANCE(3);
                    memcpy(&obj->instance, &instance3, sizeof(obj->instance));
                    break;
                }
#endif
                default:
                    continue;
            }
            nrfx_uarte_in_use[index] = true;
            break;
        }
    }
    MBED_ASSERT(obj->instance.drv_inst_idx < NRFX_UARTE_ENABLED_COUNT);

    nrfx_uarte_config_t config = NRFX_UARTE_DEFAULT_CONFIG(tx, rx);
    memcpy(&obj->config, &config, sizeof(obj->config));
    obj->config.p_context = (serial_t *)obj;

    if (obj == &stdio_uart) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }

    nrfx_uarte_init(&obj->instance, &obj->config, serial_event_handler);
}

void serial_free(serial_t *obj) {
    uint8_t index = obj->instance.drv_inst_idx;
    nrfx_uarte_uninit(&obj->instance);
    nrfx_uarte_in_use[index] = false;
}

void serial_baud(serial_t *obj, int baudrate) {
    nrfx_uarte_uninit(&obj->instance);

    /* Support the most common used baud rates */
    switch (baudrate) {
        case 9600:
            obj->config.baudrate = NRF_UARTE_BAUDRATE_9600;
            break;
        case 115200:
            obj->config.baudrate = NRF_UARTE_BAUDRATE_115200;
            break;
        case 230400:
            obj->config.baudrate = NRF_UARTE_BAUDRATE_230400;
            break;
        case 460800:
            obj->config.baudrate = NRF_UARTE_BAUDRATE_460800;
            break;
        case 921600:
            obj->config.baudrate = NRF_UARTE_BAUDRATE_921600;
            break;
        case 1000000:
            obj->config.baudrate = NRF_UARTE_BAUDRATE_1000000;
            break;
        default:
            MBED_WARNING1(MBED_MAKE_ERROR(MBED_MODULE_DRIVER_SERIAL, MBED_ERROR_CODE_UNSUPPORTED), "baudrate not supported", baudrate);
            break;
    }

    nrfx_uarte_init(&obj->instance, &obj->config, serial_event_handler);
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits) {
    MBED_WARNING(MBED_MAKE_ERROR(MBED_MODULE_DRIVER_SERIAL, MBED_ERROR_CODE_UNSUPPORTED), "serial_format");
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable) {
    switch (irq) {
        case RxIrq:
            obj->rx_irq_enable = (bool)enable;
            if (enable) {
                nrfx_uarte_rx(&obj->instance, &obj->rx_buffer_primary[0], sizeof(obj->rx_buffer_primary));
            }
            break;
        case TxIrq:
            obj->tx_irq_enable = (bool)enable;
            break;
    }
}

int serial_readable(serial_t *obj) {
    return obj->rx_buffer_primary_set || obj->rx_buffer_secondary_set;
}
